// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto2";
package spec;

// see edition2023.proto
message Proto2MessageForEdition2023 {
  optional bool optional_bool_field = 1;
  optional Proto2EnumForEdition2023 optional_closed_enum_field = 2;
  optional string optional_string_field_with_default = 3 [default = ""];
  optional group OptionalGroup = 4 {
    optional int32 int32_field = 1;
  }
  required bool required_bool_field = 5;
  required Proto2EnumForEdition2023 required_closed_enum_field = 6;
  required string required_string_field_with_default = 7 [default = "hello \" */ "];
  required group RequiredGroup = 8 {
    optional int32 int32_field = 1;
  }
  repeated double packed_double_field = 9 [packed = true];
  repeated double unpacked_double_field = 10 [packed = false];
}

enum Proto2EnumForEdition2023 {
  PROTO2_ENUM_FOR_EDITION2023_A = 1;
}
