// Copyright 2021-2024 Buf Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package spec;

// see edition2023.proto
message Proto3MessageForEdition2023 {
  bool implicit_bool_field = 1;
  Proto3EnumForEdition2023 implicit_open_enum_field = 2;
  optional bool explicit_bool_field = 5;
  optional Proto3EnumForEdition2023 explicit_open_enum_field = 6;
  repeated double packed_double_field = 9 [packed = true];
  repeated double unpacked_double_field = 10 [packed = false];
}

enum Proto3EnumForEdition2023 {
  PROTO3_ENUM_FOR_EDITION2023_UNSPECIFIED = 0;
  PROTO3_ENUM_FOR_EDITION2023_A = 1;
}
